--- a/index.html
+++ b/index.html
@@ -81,51 +81,60 @@
   <body>
     <header>
       <h1>MIS PROPUESTAS</h1>
-      <h2>Por Nombre Apellido</h2>
+      <h2>Por Antonia Cáceres</h2>
       <p>Las siguientes son propuestas de visualizaciones de datos que me permitirían encontrar a quien me guíe en Proyecto de Título. Me basé en datos reales, disponibles por <a href="https://profesorfaco.github.io/troncal/clase-06/" target="_blank">aquí</a>, <a href="https://profesorfaco.github.io/troncal/clase-07/" target="_blank">allá</a> y <a href="https://disenouchile.github.io/guiaturas/guias.html" target="_blank">más allá</a>.</p>
     </header>
     <main>
       <!--1-->
       <article>
         <h3>Primera propuesta</h3>
-        <p>Aquí lo principal es el loren ipsum dolor sit amet, consecueron dolor…</p>
-        <img src="sketching/propuesta-x-desktop.png" class="desktop">
-        <img src="sketching/propuesta-x-mobile.png" class="mobile">
+        <p>Está visualización utiliza torres de información. Estas funcionan como gráfico de barras en base a su porcentaje de aprobación de título, estás torres también incluyen los nombres de los profesores, su mención, sus líneas investigativas y sus énfasis relacionados. También se utiliza un sistema de color para representar si su porcentaje de aprobación se encuentra sobre o bajo el 50%.
+
+</p>
+        <img src="sketching/propuesta-1-desktop.png" class="desktop">
+        <img src="sketching/propuesta-1-mobile.png" class="mobile">
       </article>
       <!--2-->
       <article>
         <h3>Segunda propuesta</h3>
-        <p>Aquí lo principal es el loren ipsum dolor sit amet, consecueron dolor…</p>
-        <img src="sketching/propuesta-x-desktop.png" class="desktop">
-        <img src="sketching/propuesta-x-mobile.png" class="mobile">
+        <p>La segunda propuesta simula una galaxia donde los porcentajes y los profesores giran alrededor del tema central (la aprobación de título) y se encuentran separados en órbitas por incrementos de diez en diez descendientes desde el centro. Utiliza la información del porcentaje de títulos aprobados, sus respectivas menciones y la cantidad de estudiantes que participaron con los profesores, también se al posicionar el mouse sobre los porcentajes aporta información sobre el profesor y sus líneas de investigación.
+
+</p>
+        <img src="sketching/propuesta-2-desktop.png" class="desktop">
+        <img src="sketching/propuesta-2-mobile.png" class="mobile">
       </article>
       <!--3-->
       <article>
         <h3>Tercera propuesta</h3>
-        <p>Aquí lo principal es el loren ipsum dolor sit amet, consecueron dolor…</p>
-        <img src="sketching/propuesta-x-desktop.png" class="desktop">
-        <img src="sketching/propuesta-x-mobile.png" class="mobile">
+        <p>Está propuesta permite conocer y comparar a los profesores en base a sus líneas de investigación y énfasis relacionados y sus múltiples combinaciones. Abajo de cada profesor se destaca con un color cuáles son estás líneas y énfasis. También se incluye la información, en forma de gráfico de pictogramas, de  de la cantidad de guiades por el profesor y cuántos de ellos aprobaron título.
+</p>
+        <img src="sketching/propuesta-3-desktop.png" class="desktop">
+        <img src="sketching/propuesta-3-mobile.png" class="mobile">
       </article>
       <!--4-->
       <article>
         <h3>Cuarta propuesta</h3>
-        <p>Aquí lo principal es el loren ipsum dolor sit amet, consecueron dolor…</p>
-        <img src="sketching/propuesta-x-desktop.png" class="desktop">
-        <img src="sketching/propuesta-x-mobile.png" class="mobile">
+        <p>La cuarta propuesta se enfoca en las líneas de investigación y las múltiples combinaciones de ellas. Con un formato de etiquetas se buscan las combinaciones de líneas investigativas que te interesan y genera un gráfico de barras radial de los profesores, que coinciden con las etiquetas, que compara los porcentajes de aprobación. Este aparte incluye la cantidad total de guiades por los respectivos profesores.
+</p>
+        <img src="sketching/propuesta-4-desktop.png" class="desktop">
+        <img src="sketching/propuesta-4-mobile.png" class="mobile">
       </article>
       <!--5-->
       <article>
         <h3>Quinta propuesta</h3>
-        <p>Aquí lo principal es el loren ipsum dolor sit amet, consecueron dolor…</p>
-        <img src="sketching/propuesta-x-desktop.png" class="desktop">
-        <img src="sketching/propuesta-x-mobile.png" class="mobile">
+        <p>Este se enfoca en los profesores que guiaron a los estudiantes a aprobar en las diferentes menciones. 
+El gráfico circular se divide en varios niveles, primero los aprobados, seguido de a qué mención pertenecen y por último el listado porcentaje y numérico de a cuántos de los aprobados guío cada profesor. También se incluye el total de aprobación y cuántos de esos pertenecen a cada sección.
+</p>
+        <img src="sketching/propuesta-5-desktop.png" class="desktop">
+        <img src="sketching/propuesta-5-mobile.png" class="mobile">
       </article>
       <!--6-->
       <article>
         <h3>Sexta propuesta</h3>
-        <p>Aquí lo principal es el loren ipsum dolor sit amet, consecueron dolor…</p>
-        <img src="sketching/propuesta-x-desktop.png" class="desktop">
-        <img src="sketching/propuesta-x-mobile.png" class="mobile">
+        <p>La sexta se centra en las notas obtenidas por los aprobados en relación a su profesor guía. Está considera a todos los guiades aprobados (representado en gráfico de pictograma también), la nota más alta, más baja y la mediana obtenida entre ellos. También incluye los énfasis y líneas de investigación específicas de cada profesor y las palabras repetidas en los títulos de los guiades aprobados.
+</p>
+        <img src="sketching/propuesta-6-desktop.png" class="desktop">
+        <img src="sketching/propuesta-6-mobile.png" class="mobile">
       </article>
    </main>
    <footer>
